--- a/.config/nitrogen/bg-saved.cfg
+++ b/.config/nitrogen/bg-saved.cfg
@@ -1,9 +1,9 @@
 [xin_0]
-file=/home/userh/Pictures/17009-4k.jpg
+file=/home/userh/Pictures/chad.png
 mode=4
 bgcolor=#000000
 
 [xin_1]
-file=/home/userh/Pictures/17009-4k.jpg
+file=/home/userh/Pictures/17036-4k (1).jpg
 mode=4
 bgcolor=#000000
