--- a/.config/flameshot/flameshot.ini
+++ b/.config/flameshot/flameshot.ini
@@ -1,9 +1,9 @@
 [General]
 disabledTrayIcon=false
-drawColor=#ff0000
+drawColor=#800000
 drawThickness=1
 ignoreUpdateToVersion=0.10.1
-savePath=/home/userh/Documents/tareas/MEC211/practica9/IMAGES-EJERCICIOS
+savePath=/home/userh/Documents/LaTeX/apuntes_formularios/MEC211/FRICCION/IMAGES-TEORIA-FRICCION
 savePathFixed=false
 setSaveAsFileExtension=Portable Network Graphic file (PNG) (*.png)
 showStartupLaunchMessage=true
