--- a/.config/flameshot/flameshot.ini
+++ b/.config/flameshot/flameshot.ini
@@ -1,6 +1,7 @@
 [General]
 disabledTrayIcon=false
 drawColor=#800000
+drawFontSize=8
 drawThickness=1
 ignoreUpdateToVersion=0.10.1
 savePath=/home/userh/Documents
