--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -15,7 +15,7 @@ size-transition = true
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 15.0;
+corner-radius = 9.0;
 rounded-corners-exclude = [
   # "window_type = 'normal'",
   "class_g = 'awesome'",
@@ -48,10 +48,10 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 9;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-shadow-opacity = 0
+shadow-opacity = 0.75;
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
@@ -130,7 +130,7 @@ fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-fade-in-step = 0.03;
+fade-in-step = 0.028;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
@@ -166,7 +166,7 @@ inactive-opacity = 0.8;
 frame-opacity = 0.7;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
-menu-opacity = 1.0 
+menu-opacity = 1.0
 # menu-opacity is depreciated use dropdown-menu and popup-menu instead.
 
 #If using these 2 below change their values in line 510 & 511 aswell
